# TUF-Stats-API

./: .gitignore  README.md  app.py  pyproject.toml
core/: config.py  middleware.py
models/canonical/: __init__.py  constants.py  contests.py  heatmap.py  rating.py  summary.py
routes/: badges.py  contests.py  docs.py  heatmap.py  profile.py  rating.py  raw.py  stats.py  summary.py
services/: canonical_mapper.py  client.py  heatmap_window.py
tests/: test_canonical.py  test_mapper.py
