[project]
name = "tuf-api"
version = "0.1.0"
description = "FastAPI REST API for public takeUforward profile statistics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "redis>=5.2.0",
    "uvicorn>=0.32.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
